# demo_navi

./: README.md  dependecies
arm/: .setup_assistant  package.xml
arm/config/: controllers.yaml  demo_DIR.srdf  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  motion_planning.rviz  ompl_planning.yaml  ros_controllers.yaml
arm/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  trajectory_execution.launch.xml  widowx_arm_planning.execution.launch  widowx_arm_planning_execution.launch
atwork-commander/bags_DIR/: wm21test_DIR_BMT.bag  wm21test_DIR_BTT1.bag
barrier_tape_layer/: CMakeLists.txt
barrier_tape_layer/src/: barrier_tape.cpp
demo_navi/: CMakeLists.txt  package.xml
dirbot_behaviours_behaviors/: README.md
dirbot_behaviours_behaviors/dirbot_behaviours_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
dirbot_behaviours_behaviors/dirbot_behaviours_flexbe_behaviors/manifest/: approach_ws_test.xml  detectobjects.xml  detectposes.xml  detectposesdev.xml  detectposesdev2.xml  detectposesdevcustom.xml  example_behavior.xml  navigation_behaviour.xml  refbox_navi.xml  refbox_test.xml
dirbot_behaviours_behaviors/dirbot_behaviours_flexbe_behaviors/src/dirbot_behaviours_flexbe_behaviors/: approach_ws_test_sm.py  detectobjects_sm.py  detectposes_sm.py  detectposesdev2_sm.py  detectposesdev_sm.py  detectposesdevcustom_sm.py  navigation_behaviour_sm.py  refbox_navi_sm.py  refbox_test_sm.py
omni_drive_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
(+139 files in other folders)
