<package>
  <name>dirbot_behaviours_flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     dirbot_behaviours_flexbe_behaviors references all implemented behaviors.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <export>
    <flexbe_behaviors />
  </export>

</package>
